# AMDU

./: Cargo.toml  build.rs  readme.md
.github/workflows/: deploy.yml
gfx/: icon.ai
src/: main.rs  presets.rs  workshop.rs
src/widgets/: mod.rs  modrow.rs
test/: test.html
