[package]
name = "amdu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamworks = "0.10.0"
tokio = { version = "1.32", features = ["full", "fs"] }
html-query-extractor = "0.1.1"
html-query-ast = "0.1.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false }
regex = "1.10.1"
iced = {version = "0.10.0", features = ["tokio"] }
rfd = "0.12.0"
tokio-util = "0.7.9"
humansize = "2.0.0"

[target.'cfg(unix)']
rustflags = ["-C", "link-arg=-Wl,-rpath,$ORIGIN"]